[package]
name = "zigbee"
version = "0.0.1"
authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
description = "An API for zigbee: Low-power, low-cost, low-complexity networking for the Internet of Things"
license = "MIT/Apache-2.0"
repository = "https://github.com/garro95/zigbee"
readme = "README.md"
keywords = ["zigbee", "network", "smart", "IoT", "standard"]
categories = ["network-programming"]

[dependencies]
